commons/lib-xml/xml_parser.output
   0  $accept : %entry% $end

   1  dtd_element : dtd_full_seq END

   2  dtd_full_seq : dtd_seq CLOSE dtd_op
   3               | dtd_seq CLOSE

   4  dtd_seq : dtd_item NEXT dtd_children
   5          | dtd_item OR dtd_choice
   6          | dtd_item

   7  dtd_children : dtd_item NEXT dtd_children
   8               | dtd_item

   9  dtd_choice : dtd_item OR dtd_choice
  10             | dtd_item

  11  dtd_item : OPEN dtd_full_seq
  12           | dtd_member

  13  dtd_member : IDENT dtd_op
  14             | PCDATA dtd_op
  15             | IDENT
  16             | PCDATA

  17  dtd_op : dtd_op_item dtd_op
  18         | dtd_op_item

  19  dtd_op_item : STAR
  20              | QUESTION
  21              | PLUS

  22  %entry% : '\001' dtd_element

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . dtd_element  (22)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_element  goto 6
	dtd_full_seq  goto 7
	dtd_seq  goto 8
	dtd_item  goto 9
	dtd_member  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	dtd_member : IDENT . dtd_op  (13)
	dtd_member : IDENT .  (15)

	STAR  shift 11
	QUESTION  shift 12
	PLUS  shift 13
	NEXT  reduce 15
	OR  reduce 15
	CLOSE  reduce 15

	dtd_op  goto 14
	dtd_op_item  goto 15


state 4
	dtd_member : PCDATA . dtd_op  (14)
	dtd_member : PCDATA .  (16)

	STAR  shift 11
	QUESTION  shift 12
	PLUS  shift 13
	NEXT  reduce 16
	OR  reduce 16
	CLOSE  reduce 16

	dtd_op  goto 16
	dtd_op_item  goto 15


state 5
	dtd_item : OPEN . dtd_full_seq  (11)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_full_seq  goto 17
	dtd_seq  goto 8
	dtd_item  goto 9
	dtd_member  goto 10


state 6
	%entry% : '\001' dtd_element .  (22)

	.  reduce 22


state 7
	dtd_element : dtd_full_seq . END  (1)

	END  shift 18
	.  error


state 8
	dtd_full_seq : dtd_seq . CLOSE dtd_op  (2)
	dtd_full_seq : dtd_seq . CLOSE  (3)

	CLOSE  shift 19
	.  error


state 9
	dtd_seq : dtd_item . NEXT dtd_children  (4)
	dtd_seq : dtd_item . OR dtd_choice  (5)
	dtd_seq : dtd_item .  (6)

	NEXT  shift 20
	OR  shift 21
	CLOSE  reduce 6


state 10
	dtd_item : dtd_member .  (12)

	.  reduce 12


state 11
	dtd_op_item : STAR .  (19)

	.  reduce 19


state 12
	dtd_op_item : QUESTION .  (20)

	.  reduce 20


state 13
	dtd_op_item : PLUS .  (21)

	.  reduce 21


state 14
	dtd_member : IDENT dtd_op .  (13)

	.  reduce 13


state 15
	dtd_op : dtd_op_item . dtd_op  (17)
	dtd_op : dtd_op_item .  (18)

	STAR  shift 11
	QUESTION  shift 12
	PLUS  shift 13
	NEXT  reduce 18
	OR  reduce 18
	CLOSE  reduce 18
	END  reduce 18

	dtd_op  goto 22
	dtd_op_item  goto 15


state 16
	dtd_member : PCDATA dtd_op .  (14)

	.  reduce 14


state 17
	dtd_item : OPEN dtd_full_seq .  (11)

	.  reduce 11


state 18
	dtd_element : dtd_full_seq END .  (1)

	.  reduce 1


state 19
	dtd_full_seq : dtd_seq CLOSE . dtd_op  (2)
	dtd_full_seq : dtd_seq CLOSE .  (3)

	STAR  shift 11
	QUESTION  shift 12
	PLUS  shift 13
	NEXT  reduce 3
	OR  reduce 3
	CLOSE  reduce 3
	END  reduce 3

	dtd_op  goto 23
	dtd_op_item  goto 15


state 20
	dtd_seq : dtd_item NEXT . dtd_children  (4)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_item  goto 24
	dtd_children  goto 25
	dtd_member  goto 10


state 21
	dtd_seq : dtd_item OR . dtd_choice  (5)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_item  goto 26
	dtd_choice  goto 27
	dtd_member  goto 10


state 22
	dtd_op : dtd_op_item dtd_op .  (17)

	.  reduce 17


state 23
	dtd_full_seq : dtd_seq CLOSE dtd_op .  (2)

	.  reduce 2


state 24
	dtd_children : dtd_item . NEXT dtd_children  (7)
	dtd_children : dtd_item .  (8)

	NEXT  shift 28
	CLOSE  reduce 8


state 25
	dtd_seq : dtd_item NEXT dtd_children .  (4)

	.  reduce 4


state 26
	dtd_choice : dtd_item . OR dtd_choice  (9)
	dtd_choice : dtd_item .  (10)

	OR  shift 29
	CLOSE  reduce 10


state 27
	dtd_seq : dtd_item OR dtd_choice .  (5)

	.  reduce 5


state 28
	dtd_children : dtd_item NEXT . dtd_children  (7)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_item  goto 24
	dtd_children  goto 30
	dtd_member  goto 10


state 29
	dtd_choice : dtd_item OR . dtd_choice  (9)

	IDENT  shift 3
	PCDATA  shift 4
	OPEN  shift 5
	.  error

	dtd_item  goto 26
	dtd_choice  goto 31
	dtd_member  goto 10


state 30
	dtd_children : dtd_item NEXT dtd_children .  (7)

	.  reduce 7


state 31
	dtd_choice : dtd_item OR dtd_choice .  (9)

	.  reduce 9


13 terminals, 11 nonterminals
23 grammar rules, 32 states
